# WebApp

./: Main.hs  Model.hs  WebApp.cabal  stack.yaml
