name:          WebApp
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          WebApp
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , wai
                  , warp
                  , http-types
                  , resourcet
                  , text
                  , bytestring
                  , blaze-html
                  , persistent
                  , persistent-template
                  , persistent-sqlite
                  , persistent-postgresql
                  , monad-logger
                  , heroku 
                  , transformers
                  , wai-middleware-static
                  , wai-extra
                  , time
                  
                  
